colcon_ws/log/build_2022-09-11_02-53-23/gatekeeper/stdout_stderr.log
[35m[1mScanning dependencies of target nominal_controller[0m
[ 60%] Built target gatekeeper
[ 80%] [32mBuilding CXX object CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o[0m
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp: In member function ‘void NominalController::joy_callback(sensor_msgs::msg::Joy_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:103:5: error: ‘last_transform_stamp’ was not declared in this scope; did you mean ‘last_tf_stamp’?
  103 |     last_transform_stamp = transformStamped.header.stamp;
      |     ^~~~~~~~~~~~~~~~~~~~
      |     last_tf_stamp
/root/colcon_ws/src/gatekeeper/src/nominal_controller.cpp:103:28: error: ‘transformStamped’ was not declared in this scope
  103 |     last_transform_stamp = transformStamped.header.stamp;
      |                            ^~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/nominal_controller.dir/build.make:63: CMakeFiles/nominal_controller.dir/src/nominal_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:107: CMakeFiles/nominal_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
